--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,39 @@
 <resources>
     <string name="app_name">Montaigne App</string>
-    <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 
     <!-- Strings da tela HOME-->
     <string name="TxtHomeFiltrosEnsaiosStr">Filtro de Ensaios</string>
     <string name="TxtHomeMeusProjetosStr">Meus Projetos</string>
 
+    <!-- Strings da tela ENSAIO-->
+
+
+
+    <!-- Strings da tela FURO-->
+
+
+
+    <!-- Strings da tela Carimbo Definitivo-->
+
+
+
+    <!-- Strings da tela Carimbo Único-->
+
+
+    <!-- Strings da Projeto-->
+
+
+    <!-- Strings da tela Adpter_home_projetos-->
+
+
     <!-- Strings da tela Adpter_home_filtro_Ensaios-->
-    <string name="TxtHomeSptNameStr">SPT</string>
-    <string name="TxtHomeGranulometriaNameStr">Granulometria</string>
+
+
+
+
+
+
 
 
 </resources>
