--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,16 @@
 <resources>
     <string name="app_name">Montaigne App</string>
 
+    <string name="action_settings">Settings</string>
 
+
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <!-- Strings da tela HOME-->
     <string name="TxtHomeFiltrosEnsaiosStr">Filtro de Ensaios</string>
     <string name="TxtHomeMeusProjetosStr">Meus Projetos</string>
