Layout da tela de carimbo definitivo
Foi adicionado alguns itens que faltava nesse layout como ScrowView etc...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,11 @@
     <string name="TxtCarimboDefinitivoNomeTecnico">Técnico:</string>
     <string name="TxtCarimboDefinitivoNomeEmpresa">Empresa Responsável:</string>
     <string name="TxtBotaoContinuacao">Continuação</string>
+    <string name="TxtCarimboDefinitivoContato">Contato:</string>
+    <string name="TxtCarimboDefinitivoNomeCliente">Nome do Cliente:</string>
+    <string name="TxtCarimboDefinitivoLocalObra">Local da obra:</string>
+    <string name="TxtCarimboDefinitivoQuantidadeFuros">Quantidade de Furos:</string>
+    <string name="TxtCarimboDefinitivoReferenciaNivel">Referência de Nível:</string>
     <string name="TxtCampoAsterisco">*</string>
 
     <!-- Strings da tela Carimbo Único-->
