fram alterado padrão de texto, alterado button flutuante para branco

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Montaigne App</string>
+    <string name="app_name">Montaigne - Ensaios Práticos</string>
 
     <string name="action_settings">Settings</string>
 
