Altera nome do botão para próximo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="TxtCarimboDefinitivoNomeProjeto">Nome do Projeto:</string>
     <string name="TxtCarimboDefinitivoNomeTecnico">Técnico:</string>
     <string name="TxtCarimboDefinitivoNomeEmpresa">Empresa Responsável:</string>
-    <string name="TxtBotaoContinuacao">Continuação</string>
+    <string name="TxtBotaoContinuacao">Próximo</string>
     <string name="TxtCarimboDefinitivoContato">Contato:</string>
     <string name="TxtCarimboDefinitivoNomeCliente">Nome do Cliente:</string>
     <string name="TxtCarimboDefinitivoLocalObra">Local da obra:</string>
