--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,8 @@
     <string name="TxtBotaoLocalizacao">Capturar Localização</string>
     <string name="TxtCarimboUnicoAviso">Os campos indicados com * são obrigatórios</string>
     <string name="TxtBotaoIniciarEnsaio">Iniciar Ensaio</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Strings da Projeto-->
 
