--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Montaigne - Ensaios Práticos</string>
 
     <string name="action_settings">Settings</string>
+    <string name="requerid">Obrigatório*</string>
+
 
 
     <!-- Strings used for fragments for navigation -->
