--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,14 @@
     <string name="btn_navigate_projeto">Carimbo </string>
     <string name="btn_navigate_furo">Carimbo do Furo</string>
     <string name="btn_navigate_ensaio">Finalizar Furo </string>
+
+    <!--    Categorias de projetos-->
+    <string name="categoria_spt">SPT</string>
+    <string name="categoria_granulometria">Granulometria</string>
+
+    <!--    Strings de adapters-->
+    <string name="adapter_projetos_savlos_data">Inicio do Projeto: </string>
+    <string name="adapter_projetos_savlos_projeto_label">Projeto de</string>
+
+    <string name="adapter_amostra_name">"Amostra "</string>
 </resources>
