--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,11 @@
     <string name="app_name">Montaigne - Ensaios Práticos</string>
 
     <string name="action_settings">Settings</string>
-    <string name="requerid">Obrigatório*</string>
 
+
+    <!-- Strings used for menu  -->
+    <string name="action_help">Ajuda</string>
+    <string name="action_infor">Sobre</string>
 
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -13,8 +16,8 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <!-- Strings da tela HOME-->
-    <string name="TxtHomeFiltrosEnsaiosStr">Filtro de Ensaios</string>
-    <string name="TxtHomeMeusProjetosStr">Meus Projetos</string>
+    <string name="title_Filtros_Ensaios">Filtro de Ensaios</string>
+    <string name="title_Meus_Projetos">Meus Projetos</string>
 
     <!-- Strings da tela ENSAIO-->
 
@@ -22,9 +25,9 @@
     <!-- Strings da tela FURO-->
 
 
-    <!-- Strings da tela Carimbo Definitivo -->
-    <string name="msg_carimboautomátizado">O carimbo projeto é realizado para todos os furos, contendo informações gerais que não serão alteradas nos demais furos.</string>
-    <string name="error_campo_obrigatorio"></string>
+    <!-- Strings da tela Carimbo Project -->
+    <string name="msg_carimbo_automátizado">O carimbo projeto é realizado para todos os furos, contendo informações gerais que não serão alteradas nos demais furos.</string>
+    <string name="error_campo_obrigatorio">Obrigatório*</string>
 
     <string name="registration_projectName_hint">Nome do projeto</string>
     <string name="registration_tecnico_hint">Técnico</string>
@@ -38,14 +41,15 @@
     <string name="registration_altura_referencia_nivel_hint">Altura da referência de nível</string>
     <string name="registration_coordenadas_hint">Coordenadas do projeto</string>
 
-    <!-- Strings da tela Carimbo Único-->
-    <string name="TxtCarimboUnicoDataInicio">Data de inicio:</string>
-    <string name="TxtCarimboUnicoHint">MM/DD/YYYY</string>
-    <string name="TxtCarimboUnicoNivelFuro">Nivel do Furo N:</string>
-    <string name="TxtCarimboUnicoCoordenadaFuro">Coordernadas do Furo N:</string>
-    <string name="TxtBotaoLocalizacao">Capturar Localização</string>
-    <string name="TxtCarimboUnicoAviso">Os campos indicados com * são obrigatórios</string>
-    <string name="TxtBotaoIniciarEnsaio">Iniciar Ensaio</string>
+
+
+    <!-- Strings da tela Carimbo Furo-->
+    <string name="registration_Data_inicio_furo">Data de inicio:</string>
+    <string name="hint_date">MM/DD/YYYY</string>
+    <string name="registration_nivel_furo">Nivel do Furo N:</string>
+    <string name="title_button_Coordenadas_furo">Coordernadas do Furo N:</string>
+    <string name="btn_capturar_location">Capturar Localização</string>
+    <string name="btn_start_furo">Iniciar furo</string>
 
     <string name="notImplemented">Não implementado</string>
 
@@ -70,6 +74,5 @@
     <!--    Strings de adapters-->
     <string name="adapter_projetos_savlos_data">Inicio do Projeto: </string>
     <string name="adapter_projetos_savlos_projeto_label">Projeto de</string>
-
     <string name="adapter_amostra_name">"Amostra "</string>
 </resources>
