Criação de várias amostras em sequência finalizada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,7 @@
     <string name="btn_navigate_carimbo_furo">Inicar amostras </string>
     <string name="btn_navigate_projeto">Carimbo </string>
     <string name="btn_navigate_furo">Carimbo do Furo</string>
-    <string name="btn_navigate_ensaio">Finalizar Furo </string>
+    <string name="btn_navigate_ensaio">Próxima camada</string>
 
     <!--    Categorias de projetos-->
     <string name="categoria_spt">SPT</string>
