--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,16 @@
     <string name="adapter_amostra_name">"Amostra "</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+
+    <!-- Strings Granulometria -->
+
+
+    <!-- Strings fragment indentificar agregados -->
+
+    <string name="registration_agregados">Insira a massa retida nas peneiras selecionadas da amostra :</string>
+    <string name="registration_substituir_dados_agregados">Substitua requisito </string>   //TO DO - Criar strings com lista dos dados necessários para o adpter
+
+
 </resources>
