--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="not_implemented">Não implementado</string>
+    <string name="msg_snackbar_campos_vazios">Campos obrigatórios ainda precisam ser preenchidos!</string>
 
     <!-- Strings used for menu  -->
     <string name="action_help">Ajuda</string>
