alterado cor de menu, organizado a borda do adpter home projetos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="title_Meus_Projetos">Meus Projetos</string>
 
     <!-- Strings da tela ENSAIO-->
-    <string name="spt_ensaio_title">Amostra de ensaio SPT</string>
+    <string name="spt_ensaio_title">Amostra 01</string>
 
     <string name="spt_projeto_title">Sondagens:</string>
 
